# OPCDA-MINGW-C

./: .editorconfig  .gitignore  CMakeLists.txt  compile_flags.txt
include/: OpcEnum.h  OpcEnum.idl  OpcEnum_i.c  opc_locale.h  opccomn.h  opccomn.idl  opccomn_i.c  opcda.h  opcda.idl  opcda_i.c  utf.h
include/internal/: utf.h
lib/STC-3.8/: .gitattributes
src/: Test.cc  Test2.cc  opc_locale.c  stc_instantiation.c  utf.c
test/: Test2.cc  utf_test.cc
toolchains/: i686_cross_mingw.cmake  x86_64_cross_mingw.cmake
